fixed spacing and alignment

--- a/Day4/profile_page/style.css
+++ b/Day4/profile_page/style.css
@@ -55,6 +55,7 @@ button {
     width: 400px;
     height: 320px;
     margin-bottom: 40px;
+    margin-right: 40px;
 }
 
 #pinkbar {
@@ -337,4 +338,11 @@ button {
 
 body {
     margin: auto;
+}
+
+.mainwrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
